--- a/AtomicWeb/AtomicWeb.csproj
+++ b/AtomicWeb/AtomicWeb.csproj
@@ -132,7 +132,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349C5851-65DF-11DA-9384-00065B846F21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>53057</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
